--- a/default/package.json
+++ b/default/package.json
@@ -63,7 +63,7 @@
     "react-test-renderer": "^16.6.1",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
-    "typescript": "3.1.6",
+    "typescript": "^3.2.2",
     "typescript-styled-plugin": "^0.13.0",
     "webpack": "^4.25.1"
   },
