--- a/default/package.json
+++ b/default/package.json
@@ -1,6 +1,7 @@
 {
   "name": "plab-playground-default",
   "version": "1.0.0",
+  "sideEffects": false,
   "main": "dist/index.js",
   "author": "BigCommerce Inc",
   "repository": "git@github.com:bigcommerce-labs/plab-playground.git",
@@ -27,7 +28,6 @@
     "@storybook/addon-a11y": "^4.0.4",
     "@storybook/addon-actions": "^4.0.4",
     "@storybook/addon-backgrounds": "^4.0.4",
-    "@storybook/addon-centered": "^4.0.4",
     "@storybook/addon-console": "^1.1.0",
     "@storybook/addon-info": "^4.0.4",
     "@storybook/addon-knobs": "^4.0.4",
@@ -53,7 +53,7 @@
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
-    "babel-plugin-require-context-hook": "^1.0.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "husky": "^1.1.3",
     "jest": "^23.6.0",
