--- a/default/tsconfig.base.json
+++ b/default/tsconfig.base.json
@@ -2,8 +2,6 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "importHelpers": true,
-    "declaration": true,
-    "declarationDir": "dist",
     "target": "esnext",
     "module": "esnext",
     "strict": true,
@@ -16,7 +14,7 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "outDir": "dist",
-    "isolatedModules": false,
+    "isolatedModules": true,
     "pretty": true,
     "lib": ["dom", "es2015", "es2016"]
   },
