--- a/default/package.json
+++ b/default/package.json
@@ -70,6 +70,7 @@
     "polished": "^2.3.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-popper": "^1.3.3",
     "styled-components": "^4.1.3"
   },
   "husky": {
