chore(plab): rollup config

--- a/packages/plab/tsconfig.base.json
+++ b/packages/plab/tsconfig.base.json
@@ -1,22 +1,24 @@
 {
   "compilerOptions": {
-    "esModuleInterop": true,
-    "importHelpers": true,
-    "target": "esnext",
-    "module": "esnext",
-    "strict": true,
-    "jsx": "preserve",
-    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationDir": "dist",
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "jsx": "react",
+    "lib": ["dom", "es2015", "es2016"],
+    "module": "esnext",
+    "moduleResolution": "node",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "skipLibCheck": true,
     "outDir": "dist",
-    "isolatedModules": true,
     "pretty": true,
-    "lib": ["dom", "es2015", "es2016"]
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es5"
   },
   "includes": ["src"],
   "exclude": ["node_modules", "dist", "stories", "tests", "src/**/__tests__"],
