--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -2,8 +2,9 @@
   "name": "@bigcommerce/plab",
   "version": "1.0.0",
   "sideEffects": false,
-  "private": true,
-  "main": "dist/index.js",
+  "main": "dist/plab.cjs.js",
+  "module": "dist/plab.es.js",
+  "typings": "dist/index.d.ts",
   "author": "BigCommerce Inc",
   "repository": "git@github.com:bigcommerce-labs/plab-playground.git",
   "license": "UNLICENSED",
@@ -11,6 +12,9 @@
     "dist"
   ],
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "rollup -c rollup.config.js",
+    "build:watch": "NODE_ENV=dev yarn run build --watch",
     "build:icons": "svgr --ext=tsx src/components/Icons/svg -d src/components/Icons",
     "dev": "npm run storybook",
     "lint": "tslint -p tsconfig.json",
@@ -61,6 +65,15 @@
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
     "react-test-renderer": "^16.6.1",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.3.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-filesize": "^6.0.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.19.3",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2",
