--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -14,14 +14,19 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "rollup -c rollup.config.js",
-    "build:watch": "NODE_ENV=dev yarn run build --watch",
     "build:icons": "svgr --ext=tsx src/components/Icons/svg -d src/components/Icons",
-    "dev": "npm run storybook",
+    "start": "NODE_ENV=dev yarn run build --watch",
     "lint": "tslint -p tsconfig.json",
-    "storybook": "start-storybook -p 6006",
     "test": "jest",
     "test:watch": "npm test -- --watchAll",
-    "precommit": "pretty-quick --staged"
+    "precommit": "lint-staged"
+  },
+  "dependencies": {
+    "polished": "^2.3.3",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-popper": "^1.3.3",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -30,40 +35,20 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/tslint-config": "^3.0.1",
-    "@storybook/addon-a11y": "^4.0.4",
-    "@storybook/addon-actions": "^4.0.4",
-    "@storybook/addon-backgrounds": "^4.0.4",
-    "@storybook/addon-info": "^4.0.4",
-    "@storybook/addon-knobs": "^4.0.4",
-    "@storybook/addon-links": "^4.0.4",
-    "@storybook/addon-options": "^4.0.4",
-    "@storybook/addon-storysource": "^4.0.4",
-    "@storybook/addon-viewport": "^4.0.4",
-    "@storybook/addons": "^4.0.4",
-    "@storybook/react": "4.0.4",
     "@svgr/cli": "^4.1.0",
     "@types/jest": "^23.3.12",
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@types/react-test-renderer": "^16.0.2",
-    "@types/storybook__addon-a11y": "^3.3.1",
-    "@types/storybook__addon-actions": "^3.4.1",
-    "@types/storybook__addon-backgrounds": "^4.1.0",
-    "@types/storybook__addon-centered": "^3.3.1",
-    "@types/storybook__addon-knobs": "^4.0.0",
-    "@types/storybook__addon-viewport": "^4.1.0",
-    "@types/storybook__react": "^4.0.0",
     "@types/styled-components": "^4.1.6",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "husky": "^1.1.3",
     "jest": "^23.6.0",
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.15.2",
     "react-test-renderer": "^16.6.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.3.0",
@@ -77,28 +62,13 @@
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.2",
-    "typescript-styled-plugin": "^0.13.0",
-    "webpack": "^4.25.1"
-  },
-  "dependencies": {
-    "polished": "^2.3.3",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-popper": "^1.3.3",
-    "styled-components": "^4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "typescript-styled-plugin": "^0.13.0"
   },
   "lint-staged": {
-    "linters": {
-      "*.{js,ts,tsx}": [
-        "tslint --fix",
-        "prettier --write",
-        "git add"
-      ]
-    }
+    "*.{js,ts,tsx}": [
+      "tslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
