--- a/package.json
+++ b/package.json
@@ -4,7 +4,24 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build": "lerna run build --stream",
+    "ci": "yarn run build && lerna run ci --stream",
+    "diff": "lerna diff",
+    "lint": "lerna run lint --stream",
+    "start": "lerna run start --stream",
+    "test": "lerna run test --stream"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lerna run --concurrency 1 --stream precommit"
+    }
+  },
   "devDependencies": {
+    "@commitlint/cli": "^7.5.2",
+    "@commitlint/config-conventional": "^7.5.0",
+    "husky": "^1.3.1",
     "lerna": "^3.13.0"
   }
 }
