--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -15,11 +15,22 @@
     "prebuild": "rimraf dist",
     "build": "rollup -c rollup.config.js",
     "build:icons": "svgr --ext=tsx src/components/Icons/svg -d src/components/Icons",
+    "ci": "yarn run lint && yarn run test && yarn run build",
     "start": "NODE_ENV=dev yarn run build --watch",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
+    "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
+    "lint:tsc": "tsc --noEmit",
+    "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "jest",
     "test:watch": "npm test -- --watchAll",
     "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "tslint --fix",
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "polished": "^2.3.3",
@@ -34,7 +45,7 @@
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@bigcommerce/tslint-config": "^3.0.1",
+    "@plab/configs": "1.0.0",
     "@svgr/cli": "^4.1.0",
     "@types/jest": "^23.3.12",
     "@types/react": "^16.8.2",
@@ -48,7 +59,6 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^23.6.0",
     "jest-styled-components": "^6.3.1",
-    "lint-staged": "^8.1.0",
     "react-test-renderer": "^16.6.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.3.0",
@@ -58,17 +68,6 @@
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.19.3",
-    "tslint": "^5.12.1",
-    "tslint-config-prettier": "^1.17.0",
-    "typescript": "^3.2.2",
-    "typescript-styled-plugin": "^0.13.0"
-  },
-  "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "tslint --fix",
-      "prettier --write",
-      "git add"
-    ]
+    "rollup-plugin-typescript2": "^0.19.3"
   }
 }
