--- a/packages/plab/tsconfig.base.json
+++ b/packages/plab/tsconfig.base.json
@@ -1,30 +1,11 @@
 {
+  "extends": "@plab/configs/ts",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationDir": "dist",
     "declarationMap": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "jsx": "react",
-    "lib": ["dom", "es2015", "es2016"],
     "module": "esnext",
-    "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "outDir": "dist",
-    "pretty": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "target": "es5"
   },
   "includes": ["src"],
-  "exclude": ["node_modules", "dist", "stories", "tests", "src/**/__tests__"],
-  "plugins": [
-    {
-      "name": "typescript-styled-plugin"
-    }
-  ]
+  "exclude": ["src/**/__tests__"]
 }
