--- a/packages/plab/tsconfig.json
+++ b/packages/plab/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["src", "stories", "tests", "src/**/__tests__"]
+  "include": ["src", "stories", "src/**/__tests__"]
 }
