feat(plab): add babel to rollup config

--- a/packages/plab/tsconfig.base.json
+++ b/packages/plab/tsconfig.base.json
@@ -4,7 +4,9 @@
     "declaration": true,
     "declarationDir": "dist",
     "declarationMap": true,
+    "jsx": "preserve",
     "module": "esnext",
+    "target": "esnext",
   },
   "includes": ["src"],
   "exclude": ["src/**/__tests__"]
