--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -23,34 +23,35 @@
   },
   "dependencies": {
     "@bigcommerce/plab": "1.0.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@plab/configs": "1.0.0",
-    "@storybook/addon-a11y": "^4.1.13",
-    "@storybook/addon-actions": "^4.1.13",
-    "@storybook/addon-backgrounds": "^4.1.13",
-    "@storybook/addon-info": "^4.1.13",
-    "@storybook/addon-knobs": "^4.1.13",
-    "@storybook/addon-links": "^4.1.13",
-    "@storybook/addon-options": "^4.1.13",
-    "@storybook/addon-storysource": "^4.1.13",
-    "@storybook/addon-viewport": "^4.1.13",
-    "@storybook/addons": "^4.1.13",
-    "@storybook/react": "^4.1.13",
-    "@types/react": "^16.8.5",
+    "@storybook/addon-a11y": "^5.0.1",
+    "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-backgrounds": "^5.0.1",
+    "@storybook/addon-info": "^5.0.1",
+    "@storybook/addon-knobs": "^5.0.1",
+    "@storybook/addon-links": "^5.0.1",
+    "@storybook/addon-options": "^5.0.1",
+    "@storybook/addon-storysource": "^5.0.1",
+    "@storybook/addon-viewport": "^5.0.1",
+    "@storybook/addons": "^5.0.1",
+    "@storybook/react": "^5.0.1",
+    "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "@types/storybook__addon-a11y": "^3.3.1",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-backgrounds": "^4.1.1",
-    "@types/storybook__addon-knobs": "^4.0.1",
+    "@types/storybook__addon-knobs": "^4.0.3",
     "@types/storybook__addon-viewport": "^4.1.0",
     "@types/storybook__react": "^4.0.1",
-    "@types/styled-components": "^4.1.10",
+    "@types/styled-components": "^4.1.12",
     "babel-loader": "^8.0.5",
+    "lerna": "^3.13.1",
     "ts-loader": "^5.3.3"
   }
 }
