--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "dependencies": {
+    "downshift": "^3.2.6",
+    "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -47,6 +49,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "@plab/configs": "1.0.0",
     "@svgr/cli": "^4.1.0",
+    "@types/hoist-non-react-statics": "^3.3.0",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.0",
