--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -35,10 +35,12 @@
     "downshift": "^3.2.7",
     "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "react-popper": "^1.3.3",
-    "styled-components": "^4.1.3"
+    "react-popper": "^1.3.3"
+  },
+  "peerDependencies": {
+    "styled-components": "4.x",
+    "react": ">= 16.3.0 < 17",
+    "react-dom": ">= 16.3.0 < 17"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -61,6 +63,8 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-test-renderer": "^16.8.4",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
@@ -70,6 +74,7 @@
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.20.1"
+    "rollup-plugin-typescript2": "^0.20.1",
+    "styled-components": "^4.1.3"
   }
 }
