--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -38,9 +38,9 @@
     "react-popper": "^1.3.3"
   },
   "peerDependencies": {
-    "styled-components": "4.x",
     "react": ">= 16.3.0 < 17",
-    "react-dom": ">= 16.3.0 < 17"
+    "react-dom": ">= 16.3.0 < 17",
+    "styled-components": "4.x"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -65,7 +65,7 @@
     "jest-styled-components": "^6.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-test-renderer": "^16.8.4",
+    "react-testing-library": "^6.0.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
