--- a/packages/plab/package.json
+++ b/packages/plab/package.json
@@ -62,6 +62,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^24.5.0",
+    "jest-dom": "^3.1.3",
     "jest-styled-components": "^6.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
