--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -9,7 +9,7 @@
     "build-storybook": "build-storybook",
     "ci": "yarn run lint",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
-    "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
+    "lint:prettier": "prettier --check 'stories/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
     "precommit": "lint-staged"
