chore(all): rename packages

--- a/packages/configs/prettier/package.json
+++ b/packages/configs/prettier/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@plab/configs/prettier",
+  "name": "@bigcommerce/configs/prettier",
   "main": "prettier.config.js",
   "private": true
 }
