--- a/packages/plab/tsconfig.base.json
+++ b/packages/plab/tsconfig.base.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@plab/configs/ts",
+  "extends": "@bigcommerce/configs/ts",
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "dist",
