--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@plab/storybook",
+  "name": "@bigcommerce/storybook",
   "private": true,
   "version": "1.0.0",
   "license": "MIT",
@@ -22,14 +22,14 @@
     ]
   },
   "dependencies": {
-    "@bigcommerce/plab": "1.0.0",
+    "@bigcommerce/big-design": "0.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@plab/configs": "1.0.0",
+    "@bigcommerce/configs": "1.0.0",
     "@storybook/addon-a11y": "^5.0.3",
     "@storybook/addon-actions": "^5.0.3",
     "@storybook/addon-backgrounds": "^5.0.3",
