--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,7 +7,7 @@
     "start": "yarn run storybook",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "ci": "yarn run lint",
+    "ci": "yarn run lint && build-storybook",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:prettier": "prettier --check 'stories/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
