--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bigcommerce/storybook",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "start": "yarn run storybook",
@@ -22,14 +22,14 @@
     ]
   },
   "dependencies": {
-    "@bigcommerce/big-design": "0.1.0",
+    "@bigcommerce/big-design": "^0.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
-    "@bigcommerce/configs": "0.1.0",
+    "@bigcommerce/configs": "^0.1.0",
     "@storybook/addon-a11y": "^5.0.3",
     "@storybook/addon-actions": "^5.0.3",
     "@storybook/addon-backgrounds": "^5.0.3",
