--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -36,7 +36,8 @@
     "downshift": "^3.2.7",
     "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
-    "react-popper": "^1.3.3"
+    "react-popper": "^1.3.3",
+    "@types/hoist-non-react-statics": "^3.3.0"
   },
   "peerDependencies": {
     "react": ">= 16.3.0 < 17",
@@ -51,7 +52,6 @@
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/configs": "^0.1.0",
     "@svgr/cli": "^4.1.0",
-    "@types/hoist-non-react-statics": "^3.3.0",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.0",
