--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bigcommerce/big-design",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "sideEffects": false,
   "main": "dist/big-design.cjs.js",
@@ -33,11 +33,11 @@
     ]
   },
   "dependencies": {
+    "@types/hoist-non-react-statics": "^3.3.0",
     "downshift": "^3.2.7",
     "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
-    "react-popper": "^1.3.3",
-    "@types/hoist-non-react-statics": "^3.3.0"
+    "react-popper": "^1.3.3"
   },
   "peerDependencies": {
     "react": ">= 16.3.0 < 17",
