chore(all): prepublishOnly scripts

--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -23,7 +23,8 @@
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "jest",
     "test:watch": "npm test -- --watchAll",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "prepublishOnly": "rimraf dist && yarn run ci"
   },
   "lint-staged": {
     "linters": {
