--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -43,7 +43,8 @@
     "downshift": "^3.2.7",
     "hoist-non-react-statics": "^3.3.0",
     "polished": "^3.0.3",
-    "react-popper": "^1.3.3"
+    "react-popper": "^1.3.3",
+    "scroll-into-view-if-needed": "^2.2.20"
   },
   "peerDependencies": {
     "react": ">= 16.3.0 < 17",
