--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,18 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.0.1
+  ci: bigcommerce/internal@volatile
+  node: bigcommerce/internal-node@volatile
 
 jobs:
   build:
-    docker:
-      - image: circleci/node:10
-
-    working_directory: ~/big-design
+    executor:
+      name: node/node
+      node-version: "10"
 
     steps:
-      - add_ssh_keys
-      - checkout
+      - ci/pre-setup
 
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "yarn.lock" }}
-
-      - node/install-yarn:
-          yarn-version: 1.16.0
-
-      - run: yarn install --frozen-lockfile
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "yarn.lock" }}
+      - node/yarn-install:
+          yarn_version: 1.16.0
 
       - run: yarn run ci
