--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -24,8 +24,12 @@
   },
   "dependencies": {
     "@bigcommerce/big-design": "^0.5.0",
+    "clipboard-copy": "^3.0.0",
+    "prism-react-renderer": "^0.1.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-element-to-jsx-string": "^14.0.2",
+    "react-live": "^2.1.2",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
