feat(story): code preview component (#59)
* feat(story): code preview component

* chore(story): update logo

* fix: update types

* fix(story): pr comments

--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -6,6 +6,6 @@
     "rootDirs": ["stories"],
     "baseUrl": "src"
   },
-  "include": ["stories/**/*", "typings.d.ts", ".storybook/*"],
+  "include": ["stories/**/*", "typings.d.ts", "styled.d.ts", ".storybook/*", "components/**/*"],
   "exclude": ["node_modules", "build", "scripts"]
 }
