--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-backgrounds": "^5.0.3",
     "@storybook/addon-info": "^5.0.3",
     "@storybook/addon-knobs": "^5.0.3",
+    "@storybook/addon-links": "^5.1.9",
     "@storybook/addon-viewport": "^5.0.3",
     "@storybook/addons": "^5.0.3",
     "@storybook/react": "^5.0.3",
