--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -27,15 +27,10 @@
     "prepublishOnly": "rimraf dist && yarn run ci"
   },
   "lint-staged": {
-    "linters": {
-      "*.{js,ts,tsx}": [
-        "tslint --fix",
-        "prettier --write",
-        "git add"
-      ]
-    },
-    "ignore": [
-      "dist/**"
+    "*.{js,ts,tsx}": [
+      "tslint --fix",
+      "prettier --write",
+      "git add"
     ]
   },
   "dependencies": {
@@ -59,6 +54,8 @@
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/configs": "^0.5.0",
     "@svgr/cli": "^4.1.0",
+    "@testing-library/jest-dom": "^4.0.0",
+    "@testing-library/react": "^8.0.5",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.0",
@@ -70,20 +67,18 @@
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "jest": "^24.5.0",
-    "jest-dom": "^3.1.3",
     "jest-styled-components": "^6.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-testing-library": "^6.0.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup-plugin-typescript2": "^0.22.0",
     "styled-components": "^4.1.3"
   }
 }
