--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -28,7 +28,6 @@
     "prism-react-renderer": "^0.1.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-element-to-jsx-string": "^14.0.2",
     "react-live": "^2.1.2",
     "styled-components": "^4.1.3"
   },
@@ -55,6 +54,7 @@
     "@types/storybook__react": "^4.0.1",
     "@types/styled-components": "^4.1.12",
     "babel-loader": "^8.0.5",
+    "jsx-to-string-loader": "^1.1.1",
     "rimraf": "^2.6.3",
     "ts-loader": "^6.0.4"
   }
