--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     executor:
       name: node/node
-      node-version: "10"
+      node-version: '10'
 
     steps:
       - ci/pre-setup
@@ -16,3 +16,12 @@ jobs:
           yarn_version: 1.16.0
 
       - run: yarn run ci
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build:
+        filters:
+          branches:
+            ignore: gh-pages
