--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,6 +7,7 @@
     "start": "yarn run storybook",
     "storybook": "start-storybook -p 6006 -s .storybook/assets",
     "build-storybook": "build-storybook -s .storybook/assets",
+    "deploy-storybook": "storybook-to-ghpages",
     "ci": "yarn run lint && build-storybook",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:prettier": "prettier --check 'stories/**/*.{ts,tsx}'",
@@ -42,6 +43,7 @@
     "@storybook/addon-viewport": "^5.0.3",
     "@storybook/addons": "^5.0.3",
     "@storybook/react": "^5.0.3",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@storybook/theming": "^5.1.9",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
