--- a/packages/big-design/tsconfig.json
+++ b/packages/big-design/tsconfig.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": ["src", "src/**/__tests__", "setupTests.ts"]
+  "include": ["src", "src/**/__tests__", "setupTests.ts"],
+  "exclude": ["dist"]
 }
