--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -54,10 +54,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/configs": "^0.5.0",
-    "@svgr/core": "^4.3.2",
-    "@svgr/plugin-jsx": "^4.3.2",
-    "@svgr/plugin-prettier": "^4.3.2",
-    "@svgr/plugin-svgo": "^4.3.1",
+    "@svgr/cli": "^4.3.2",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.5",
     "@types/jest": "^24.0.11",
@@ -65,18 +62,11 @@
     "@types/react-dom": "^16.8.0",
     "@types/react-test-renderer": "^16.0.2",
     "@types/styled-components": "^4.1.12",
-    "babel-core": "^7.0.0-0",
     "babel-jest": "^24.5.0",
-    "babel-loader": "^8.0.4",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "camelcase": "^5.3.1",
-    "fs-extra": "^8.1.0",
-    "glob": "^7.1.4",
-    "glob-promise": "^3.4.0",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
-    "material-design-icons": "^3.0.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
