fix(theme): export missing properties

--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -18,6 +18,9 @@
     "test": "jest",
     "test:watch": "npm test -- --watchAll"
   },
+  "files": [
+    "dist"
+  ],
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "tslint --fix",
