--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -10,7 +10,7 @@
     "deploy-storybook": "storybook-to-ghpages",
     "ci": "yarn run lint && build-storybook",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
-    "lint:prettier": "prettier --check 'stories/**/*.{ts,tsx}'",
+    "lint:prettier": "prettier --check '{stories,components}/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
     "precommit": "lint-staged",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@bigcommerce/big-design": "^0.5.0",
+    "@bigcommerce/big-design-theme": "^0.0.1",
     "clipboard-copy": "^3.0.0",
     "prism-react-renderer": "^0.1.7",
     "react": "^16.8.4",
