--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -54,6 +54,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/configs": "^0.5.0",
+    "@bigcommerce/big-design-theme": "^0.0.1",
     "@svgr/cli": "^4.3.2",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.5",
