--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "main": "dist/big-design-icons.cjs.js",
   "module": "dist/big-design-icons.es.js",
-  "typings": "dist/src/index.d.ts",
+  "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c rollup.config.js",
@@ -29,9 +29,13 @@
     "dist",
     "svgs"
   ],
+  "dependencies": {
+    "@bigcommerce/big-design-theme": "^0.0.1"
+  },
   "peerDependencies": {
     "react": ">= 16.3.0 < 17",
-    "react-dom": ">= 16.3.0 < 17"
+    "react-dom": ">= 16.3.0 < 17",
+    "styled-components": ">=4.1.0 <5"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -44,6 +48,7 @@
     "@svgr/plugin-jsx": "^4.3.2",
     "@svgr/plugin-prettier": "^4.3.2",
     "@svgr/plugin-svgo": "^4.3.1",
+    "@types/styled-components": "^4.1.12",
     "camelcase": "^5.3.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
@@ -59,6 +64,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.22.0"
+    "rollup-plugin-typescript2": "^0.22.0",
+    "styled-components": "^4.1.3"
   }
 }
