--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -6,6 +6,12 @@
   "module": "dist/big-design-theme.es.js",
   "typings": "dist/index.d.ts",
   "license": "MIT",
+  "author": "BigCommerce Inc",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bigcommerce/big-design.git",
+    "directory": "packages/big-design-theme"
+  },
   "scripts": {
     "build": "rollup -c rollup.config.js",
     "ci": "yarn run lint && yarn run test && yarn run build",
