--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -7,8 +7,12 @@
   "module": "dist/big-design.es.js",
   "typings": "dist/src/index.d.ts",
   "author": "BigCommerce Inc",
-  "repository": "git@github.com:bigcommerce/big-design.git",
-  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bigcommerce/big-design.git",
+    "directory": "packages/big-design"
+  },
+  "license": "MIT",
   "files": [
     "dist"
   ],
