feat(component): use new icons package
BREAKING CHANGE: all icons got moved to `@bigcommerce/big-design-icons`
package and some of them were renamed.

--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -18,7 +18,6 @@
   ],
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "build:icons": "svgr --ext=tsx src/components/Icons/svg -d src/components/Icons",
     "ci": "yarn run lint && yarn run test && yarn run build",
     "start": "NODE_ENV=dev yarn run build --watch",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
@@ -53,13 +52,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@bigcommerce/configs": "^0.5.0",
     "@bigcommerce/big-design-theme": "^0.0.1",
-    "@svgr/cli": "^4.3.2",
+    "@bigcommerce/configs": "^0.5.0",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.5",
     "@types/jest": "^24.0.11",
@@ -68,15 +66,14 @@
     "@types/react-test-renderer": "^16.0.2",
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^24.5.0",
-    "babel-plugin-styled-components": "^1.10.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-styled-components": "^1.10.6",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
-    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel": "4.2.0",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
