fix(icons): use object style notation for icon base

--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -2,6 +2,7 @@
   "name": "@bigcommerce/big-design-icons",
   "version": "0.0.1",
   "private": false,
+  "sideEffects": false,
   "main": "dist/big-design-icons.cjs.js",
   "module": "dist/big-design-icons.es.js",
   "typings": "dist/index.d.ts",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
@@ -55,6 +57,7 @@
     "@svgr/plugin-prettier": "^4.3.2",
     "@svgr/plugin-svgo": "^4.3.1",
     "@types/styled-components": "^4.1.12",
+    "babel-plugin-styled-components": "^1.10.6",
     "camelcase": "^5.3.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
@@ -64,7 +67,7 @@
     "node-fetch": "^2.6.0",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
-    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel": "4.2.0",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
