chore(all): lock rollup-pluin-babel to 4.2.0

--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -2,6 +2,7 @@
   "name": "@bigcommerce/big-design-theme",
   "version": "0.0.1",
   "private": false,
+  "sideEffects": false,
   "main": "dist/big-design-theme.cjs.js",
   "module": "dist/big-design-theme.es.js",
   "typings": "dist/index.d.ts",
@@ -44,7 +45,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
@@ -56,7 +56,7 @@
     "jest-styled-components": "^6.3.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
-    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel": "4.2.0",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
