--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -5,15 +5,16 @@
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.1.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@bigcommerce/tslint-config": "^4.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "lint-staged": "^9.2.0",
     "prettier": "^1.16.4",
     "rollup": "^1.6.0",
-    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-babel": "4.2.0",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
