--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -39,9 +39,9 @@
     "polished": "^3.0.3"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0 < 17",
-    "react-dom": ">= 16.3.0 < 17",
-    "styled-components": ">= 4.0.0 < 5"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "styled-components": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -54,6 +54,8 @@
     "babel-jest": "^24.5.0",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "4.2.0",
@@ -63,6 +65,9 @@
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.22.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "tslint": "^5.14.0",
+    "typescript": "^3.5.3",
+    "typescript-styled-plugin": "^0.14.0"
   }
 }
