--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -46,9 +46,9 @@
     "scroll-into-view-if-needed": "^2.2.20"
   },
   "peerDependencies": {
-    "react": ">= 16.3.0 < 17",
-    "react-dom": ">= 16.3.0 < 17",
-    "styled-components": "4.x"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "styled-components": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -69,6 +69,8 @@
     "babel-plugin-styled-components": "^1.10.6",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
+    "lint-staged": "^9.2.0",
+    "prettier": "^1.16.4",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
@@ -80,6 +82,9 @@
     "rollup-plugin-replace": "^2.1.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.22.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "tslint": "^5.14.0",
+    "typescript": "^3.5.3",
+    "typescript-styled-plugin": "^0.14.0"
   }
 }
