--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "big-design",
   "private": true,
+  "license": "SEE LICENSE IN LICENSE.md",
   "workspaces": [
     "packages/*"
   ],
