--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,7 +3,7 @@
   "version": "0.5.0",
   "private": true,
   "sideEffects": false,
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE.md",
   "author": "BigCommerce Inc",
   "repository": {
     "type": "git",
