feat(component): update badge padding and custom font size

--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -25,7 +25,7 @@
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "jest",
-    "test:watch": "npm test -- --watchAll",
+    "test:watch": "yarn run test --watch",
     "precommit": "lint-staged",
     "prepublishOnly": "rimraf dist && yarn run ci"
   },
