chore: add publish configs

--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -36,6 +36,9 @@
     "dist",
     "svgs"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@bigcommerce/big-design-theme": "^0.0.1"
   },
