--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bigcommerce/big-design",
   "version": "0.5.0",
-  "private": true,
+  "private": false,
   "sideEffects": false,
   "main": "dist/big-design.cjs.js",
   "module": "dist/big-design.es.js",
