chore: lerna ignore changes in .md and specs

--- a/lerna.json
+++ b/lerna.json
@@ -9,5 +9,6 @@
       "conventionalCommits": true,
       "message": "chore(release): publish"
     }
-  }
+  },
+  "ignoreChanges": ["**/*spec.ts", "**/*spec.tsx", "**/*.snap", "**/*.md"]
 }
