chore(all): use Babel and TS 3.7

--- a/packages/big-design/tsconfig.base.json
+++ b/packages/big-design/tsconfig.base.json
@@ -4,7 +4,7 @@
     "declaration": true,
     "declarationDir": "dist",
     "declarationMap": true,
-    "jsx": "preserve"
+    "isolatedModules": true
   },
   "includes": ["src"],
   "exclude": ["src/**/__tests__"]
