--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -14,9 +14,11 @@
     "directory": "packages/big-design-icons"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js",
-    "download": "node scripts/downloader.js",
+    "build": "yarn run build:js && yarn run build:dt",
+    "build:js": "rollup -c rollup.config.js",
+    "build:dt": "tsc --emitDeclarationOnly",
     "build:icons": "node scripts/build.js",
+    "download": "node scripts/downloader.js",
     "ci": "yarn run lint && yarn run build",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
@@ -48,8 +50,8 @@
     "styled-components": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/core": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
@@ -74,15 +76,12 @@
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "4.2.0",
-    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.22.1",
     "styled-components": "^4.1.3",
     "tslint": "^5.14.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.7.2",
     "typescript-styled-plugin": "^0.14.0"
   }
 }
