--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -14,7 +14,9 @@
     "directory": "packages/big-design-theme"
   },
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "yarn run build:js && yarn run build:dt",
+    "build:js": "rollup -c rollup.config.js",
+    "build:dt": "tsc --emitDeclarationOnly",
     "ci": "yarn run lint && yarn run test && yarn run build",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
@@ -23,7 +25,7 @@
     "precommit": "lint-staged",
     "prepublishOnly": "rimraf dist && yarn run ci",
     "test": "jest",
-    "test:watch": "npm test -- --watchAll"
+    "test:watch": "jest --watch"
   },
   "files": [
     "dist"
@@ -47,7 +49,7 @@
     "styled-components": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.7.0",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
@@ -55,6 +57,7 @@
     "@types/jest": "^24.0.16",
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^24.5.0",
+    "concurrently": "^5.0.0",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^9.2.0",
@@ -62,15 +65,12 @@
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "4.2.0",
-    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.22.1",
     "styled-components": "^4.1.3",
     "tslint": "^5.14.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.7.2",
     "typescript-styled-plugin": "^0.14.0"
   }
 }
