--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -17,13 +17,15 @@
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c rollup.config.js",
+    "build": "yarn run build:js && yarn run build:dt",
+    "build:js": "rollup -c rollup.config.js",
+    "build:dt": "tsc --emitDeclarationOnly",
     "ci": "yarn run lint && yarn run test && yarn run build",
-    "start": "NODE_ENV=dev yarn run build --watch",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
+    "start": "NODE_ENV=dev concurrently \"yarn:build:* --watch\"",
     "test": "jest",
     "test:watch": "yarn run test --watch",
     "precommit": "lint-staged",
@@ -55,11 +57,12 @@
     "styled-components": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
+    "@babel/core": "^7.7.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.0",
     "@bigcommerce/configs": "^0.7.0",
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
@@ -70,6 +73,7 @@
     "@types/styled-components": "^4.1.12",
     "babel-jest": "^24.5.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "concurrently": "^5.0.0",
     "jest": "^24.5.0",
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^9.2.0",
@@ -79,15 +83,12 @@
     "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "4.2.0",
-    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-filesize": "^6.0.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.22.1",
     "styled-components": "^4.1.3",
     "tslint": "^5.14.0",
-    "typescript": "^3.5.3",
+    "typescript": "^3.7.2",
     "typescript-styled-plugin": "^0.14.0"
   }
 }
