--- a/packages/big-design/tsconfig.base.json
+++ b/packages/big-design/tsconfig.base.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "dist",
-    "declarationMap": true,
-    "isolatedModules": true
+    "declarationMap": true
   },
   "includes": ["src"],
   "exclude": ["src/**/__tests__"]
