feat(all): better tree shaking

--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -3,8 +3,8 @@
   "version": "0.13.0",
   "private": false,
   "sideEffects": false,
-  "main": "dist/big-design.cjs.js",
-  "module": "dist/big-design.es.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
   "typings": "dist/src/index.d.ts",
   "author": "BigCommerce Inc",
   "repository": {
@@ -17,16 +17,17 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn run build:js && yarn run build:dt",
-    "build:js": "rollup -c rollup.config.js",
+    "build": "yarn run build:cjs && yarn run build:es && yarn run build:dt",
+    "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/cjs",
+    "build:es": "NODE_ENV=production BABEL_ENV=es babel --extensions \".ts,.tsx\" ./src --out-dir ./dist/es",
     "build:dt": "tsc --emitDeclarationOnly",
     "ci": "yarn run lint && yarn run test && yarn run build",
     "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
     "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "NODE_ENV=dev concurrently \"yarn:build:* --watch\"",
-    "test": "jest",
+    "start": "concurrently \"yarn:build:* --watch\"",
+    "test": "BABEL_ENV=test jest",
     "test:watch": "yarn run test --watch",
     "precommit": "lint-staged",
     "prepublishOnly": "rimraf dist && yarn run ci"
@@ -57,9 +58,12 @@
     "styled-components": "^4.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.0",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-object-assign": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-typescript": "^7.7.0",
@@ -81,11 +85,6 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "rimraf": "^2.6.3",
-    "rollup": "^1.6.0",
-    "rollup-plugin-babel": "4.2.0",
-    "rollup-plugin-filesize": "^6.0.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.1.0",
     "styled-components": "^4.3.0",
     "tslint": "^5.14.0",
     "typescript": "^3.7.2",
