--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -21,7 +21,8 @@
     "build:icons": "node scripts/build.js",
     "download": "node scripts/downloader.js",
     "ci": "yarn run lint && yarn run build",
-    "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
+    "lint": "yarn run lint:eslint && yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
+    "lint:eslint": "eslint src/**/* --ext '.ts,.tsx'",
     "lint:prettier": "prettier --check 'src/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
@@ -30,6 +31,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
+      "eslint --fix",
       "tslint --fix",
       "prettier --write",
       "git add"
@@ -68,8 +70,11 @@
     "@svgr/plugin-prettier": "^5.0.1",
     "@svgr/plugin-svgo": "^5.0.1",
     "@types/styled-components": "^4.1.12",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-plugin-styled-components": "^1.10.6",
     "camelcase": "^5.3.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
     "glob-promise": "^3.4.0",
