--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -15,7 +15,8 @@
     "deploy": "yarn run build-static && touch out/.nojekyll && push-dir --dir=out --branch=gh-pages --verbose",
     "start": "next",
     "ci": "yarn run lint && yarn run build-static",
-    "lint": "yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
+    "lint": "yarn run lint:eslint && yarn run lint:tslint && yarn run lint:tsc && yarn run lint:prettier",
+    "lint:eslint": "eslint pages/**/* components/**/* PropTables/**/* --ext '.ts,.tsx'",
     "lint:prettier": "prettier --check 'pages/**/*.{ts,tsx}' 'components/**/*.{ts,tsx}' 'PropTables/**/*.{ts,tsx}'",
     "lint:tsc": "tsc --noEmit",
     "lint:tslint": "tslint -c tslint.json -p tsconfig.json",
@@ -23,6 +24,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
+      "eslint --fix",
       "tslint --fix",
       "prettier --write",
       "git add"
@@ -50,7 +52,10 @@
     "@types/gtag.js": "^0.0.2",
     "@types/prettier": "^1.18.3",
     "@types/styled-components": "^4.1.12",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-plugin-styled-components": "^1.10.6",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jsx-to-string-loader": "^1.2.0",
     "next": "^9.0.3",
     "push-dir": "^0.4.1",
