--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "eslint": "^6.8.0",
     "husky": "^4.2.1",
-    "lerna": "^3.16.4"
+    "lerna": "^3.16.4",
+    "prettier": "^1.16.4",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.2"
   }
 }
