--- a/packages/big-design-theme/package.json
+++ b/packages/big-design-theme/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@bigcommerce/big-design-theme",
   "version": "0.5.0",
-  "private": false,
   "sideEffects": false,
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -67,6 +66,7 @@
     "@types/styled-components": "^4.1.12",
     "@typescript-eslint/parser": "^2.16.0",
     "babel-jest": "^25.1.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "concurrently": "^5.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react-hooks": "^2.3.0",
@@ -74,6 +74,8 @@
     "jest-styled-components": "^6.3.1",
     "lint-staged": "^9.2.0",
     "prettier": "^1.16.4",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "rimraf": "^3.0.2",
     "styled-components": "^4.3.0",
     "tslint": "^6.0.0",
