--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@bigcommerce/big-design",
   "version": "0.15.0",
-  "private": false,
   "sideEffects": false,
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
@@ -73,6 +72,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
     "@types/jest": "^25.1.2",
+    "@types/node": "^13.1.8",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.5",
     "@types/react-test-renderer": "^16.8.3",
