--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -5,6 +5,11 @@
   "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "@bigcommerce/tslint-config": "^4.0.0",
-    "tslint-config-prettier": "^1.18.0"
+    "@typescript-eslint/parser": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.7.2"
   }
 }
