--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.7.0",
     "@babel/preset-react": "^7.7.0",
     "@babel/preset-typescript": "^7.7.0",
     "@babel/standalone": "^7.7.3",
@@ -50,7 +51,10 @@
     "@bigcommerce/configs": "^0.10.0",
     "@bigcommerce/examples": "^0.2.0",
     "@types/gtag.js": "^0.0.3",
+    "@types/node": "^13.1.8",
     "@types/prettier": "^1.18.3",
+    "@types/react": "^16.8.8",
+    "@types/react-dom": "^16.8.5",
     "@types/styled-components": "^4.1.12",
     "@typescript-eslint/parser": "^2.16.0",
     "babel-plugin-styled-components": "^1.10.6",
