--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "lib": ["dom", "es2015"],
     "jsx": "react",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true,
   }
 }
