--- a/packages/big-design/package.json
+++ b/packages/big-design/package.json
@@ -44,11 +44,13 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "@bigcommerce/big-design-icons": "^0.8.0",
     "@bigcommerce/big-design-theme": "^0.6.0",
     "downshift": "^5.0.3",
     "focus-trap": "^5.1.0",
     "polished": "^3.0.3",
+    "popper.js": "^1.16.1",
     "react-popper": "^1.3.7",
     "react-uid": "^2.2.0"
   },
