--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "build": "lerna run build --stream",
     "ci": "lerna run ci --stream",
     "diff": "lerna diff",
-    "lint": "lerna run lint --stream",
+    "lint": "eslint . --ext .ts,.tsx,.js && lerna run lint --stream",
     "start": "lerna run start --stream --parallel --ignore @bigcommerce/examples",
     "test": "lerna run test --stream"
   },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lerna run --concurrency 1 --stream precommit"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
@@ -31,9 +37,10 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "husky": "^4.2.1",
+    "husky": "^4.2.5",
     "lerna": "^3.16.4",
+    "lint-staged": "^9.2.0",
     "prettier": "^2.0.5",
-    "typescript": "^3.7.2"
+    "typescript": "^3.8.3"
   }
 }
