--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "lerna": "^3.16.4",
     "lint-staged": "^9.2.0",
     "prettier": "^2.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "~3.8.3"
   }
 }
