--- a/packages/big-design-icons/package.json
+++ b/packages/big-design-icons/package.json
@@ -73,7 +73,7 @@
     "react-dom": "^16.8.4",
     "rimraf": "^3.0.2",
     "styled-components": "^4.3.0",
-    "typescript": "^3.8.3",
+    "typescript": "~3.8.3",
     "typescript-styled-plugin": "^0.15.0"
   }
 }
